tests/ui/lexer/lex-bad-str-literal-as-char-2.stderr
error: character literal may only contain one codepoint
  --> $DIR/lex-bad-str-literal-as-char-2.rs:3:14
   |
LL |     println!(' 1 + 1');
   |              ^^^^^^^^
   |
help: if you meant to write a string literal, use double quotes
   |
LL -     println!(' 1 + 1');
LL +     println!(" 1 + 1");
   |

error: aborting due to 1 previous error

