tests/ui/lexer/lex-bad-str-literal-as-char-2.rs
//@ run-rustfix
fn main() {
    println!(' 1 + 1'); //~ ERROR character literal may only contain one codepoint
}
